<resources>
    <string name="app_name">minesweeper</string>
    <string name="rishav_s_minesweeper">RISHAV\'S MINESWEEPER</string>
    <string name="easy">EASY</string>
    <string name="moderate">MODERATE</string>
    <string name="hard">HARD</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="or">OR</string>
    <string name="make_a_custom_board">MAKE A CUSTOM BOARD</string>
    <string name="start">START</string>
    <string name="best_time_15s">BEST TIME :- 15s</string>
    <string name="last_game_time_45s">LAST GAME TIME :- 45s</string>
    <string name="_1">1</string>
    <string name="saved_high_score_key">highscore</string>
    <string name="last_time">lastTime</string>
    <string name="_45">45</string>
    <string name="time">TIME</string>
    <string name="mines">MINES</string>
    <string name="restart">RESTART</string>
    <string name="number_of_columns">number of columns</string>
    <string name="number_of_rows">number of rows :-</string>
    <string name="number_of_mines">number of mines</string>
    <string name="best_time">BEST TIME :</string>
    <string name="_00">00</string>
    <string name="_10">00</string>
    <string name="last_game_time">LAST GAME TIME :</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO</string>
    <string name="textview">TextView</string>
    <string name="try_again">Try Again</string>
    <string name="textview1">TextView</string>
    <string name="enter_height">Enter Height*</string>
    <string name="enter_width">Enter Width*</string>
    <string name="enter_mines">Enter Mines*</string>
    <string name="enter_the_dimensions">Enter The Dimensions</string>
    <string name="submit">Submit</string>
    <string name="your_best_time">YOUR BEST TIME</string>
</resources>